# crash_reporter

./: Cargo.toml  README.md
src/: collector.rs  lib.rs  logger.rs  main.rs
tests/: integration_test.rs
